styled and finished

--- a/index.html
+++ b/index.html
@@ -1,32 +1,55 @@
-<!DOCTYPE HTML>
-        <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
-    <link rel='stylesheet' href='./style.css'/>
-</head>
-<body>
-    <header>
-        <h1>dfg</h1>
-        <h2>fg</h2>
-        <h3>fg</h3>
-        <h4>fgd
-        <img src="./images/ET.png">
-    </header>
 
-    <div>
-        <h3>ABOUT ME</h3>
-        <p class='bio'>Engineer</p>
-        <p class='bio'>dfg</p>
-        <p class='bio'>dfg</p>
-        <p class='bio'>dfg</p>
-        <p class='bio'>dfg</p>
-        <p class='bio'>undefined</p>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+      <link rel="stylesheet" type="text/css" href="./index.css">
+      <title>Team Profile</title>
+    </head>
+    <body>
+      <header class="container-fliud">
+        <nav class="navbar navbar-dark bg-info justify-content-center">
+          <h1>Team Profile</h1>
+        </nav>
+      </header>
+      <main>
+        <div class="container-fluid row col-12">
+            <div class="card-deck container-fluid row" id="deck">
+              
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h3 id="employee-name" class="card-title">Ann Sabie</h3>
+      <h5 id="employee-role" class="card-subtitle">Manager</h5>
+      <p id="employee-id" class="card-text">Employee ID: 546</p>
+      <p id="employee-office" class="card-text">Office: 292</p>
+      <p id="employee-email" class="card-text"><a href="mailto:annsabie1@gmail.com">Email: annsabie1@gmail.com</a>
     </div>
-
-    <footer>
-    </footer>
-</body>
-</html>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h3 id="employee-name" class="card-title">Bob Jones</h3>
+      <h5 id="employee-role" class="card-subtitle">Engineer</h5>
+      <p id="employee-id" class="card-text">Employee ID: 345</p>
+      <p id="employee-github" class="card-text">GitHub: Bob</p>
+      <p id="employee-email" class="card-text"><a href="mailto:bob@gmail.com">Email: bob@gmail.com</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h3 id="employee-name" class="card-title">Jane Doe</h3>
+      <h5 id="employee-role" class="card-subtitle">Intern</h5>
+      <p id="employee-id" class="card-text">Employee ID: 53</p>
+      <p id="employee-school" class="card-text">School: U of M</p>
+      <p id="employee-email" class="card-text"><a href="mailto:jane@gmail.com">Email: jane@gmail.com</a>
+    </div>
+  </div>
+            </div>
+        </div>
+      </main>
+      
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    </body>
+    </html>
